# forge

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-cli.yml
docs/: PRD-mvp.md
docs/adr/: 0001-positioning-and-wedge.md  0002-agent-execution-model.md  0003-mvp-scope.md  0004-git-server-and-storage.md  0005-sandbox-runtime.md  0006-llm-strategy.md  0007-service-topology.md  0008-auth-model.md  0009-aws-deployment-topology.md  0010-forge-cli-scope.md  0011-cli-device-code-auth.md  0012-cli-release-distribution.md
forge-agent/: Dockerfile  README.md  pyproject.toml
forge-agent/app/: agent_loop.py  auth.py  e2b_workspace.py  eventbus.py  main.py  model_client.py  platform_client.py  reviewer.py  run_pubsub.py  runner.py  sandbox.py  state_machine.py  tools.py  workspace.py
forge-agent/scripts/: check_imports.sh
forge-agent/tests/: test_agent_loop.py  test_eval_fixture_docstring.py  test_reviewer.py  test_state_machine.py
forge-cli/: .goreleaser.yaml  Dockerfile  README.md  go.mod
forge-infra/: .terraform.lock.hcl  README.md  alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  network.tf  nlb.tf  outputs.tf  rds.tf  variables.tf
forge-platform/: Dockerfile  README.md  go.mod  go.sum
forge-platform/migrations/: 00_bootstrap.sql  01_users.sql  02_repositories.sql  03_git_secrets.sql  04_pulls.sql  05_issues.sql  06_runs.sql  07_device_codes.sql  08_pats.sql  09_ssh_keys.sql
forge-web/: Dockerfile  README.md  package.json
scripts/: gen-jwt-keys.sh  install-forge.sh
(+80 files in other folders)
