[project]
name = "forge-agent"
version = "0.0.1"
description = "Forge agent orchestrator — Run lifecycle, agent loop, ModelClient, SandboxProvider."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
